[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Boldfont.tres" type="DynamicFont" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Teleport"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="UI" type="Control" groups=[
"UI",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Teleport = SubResource( 1 )

[node name="GameOverScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="GameOverScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverTimer" type="Timer" parent="GameOverScreen"]
wait_time = 2.0

[node name="RestartButton" type="Button" parent="GameOverScreen"]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -28.5
margin_top = -10.0
margin_right = 28.5
margin_bottom = 10.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ActionUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -171.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0:00:00"
align = 1
valign = 1
[connection signal="timeout" from="GameOverScreen/GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="pressed" from="GameOverScreen/RestartButton" to="." method="_on_RestartButton_pressed"]
